DT-2693 Fixes Lender Match landing page misalignment
- Margin between hero and “How it works”
- “Get Ready” width and alignment
- “Details” width and alignment

--- a/src/client/components/organisms/lender-match/landing-page/find-lenders-intro.scss
+++ b/src/client/components/organisms/lender-match/landing-page/find-lenders-intro.scss
@@ -1,7 +1,3 @@
-@media screen and (min-width:768px){
-
-}
-
-@media screen and (max-width:767px) {
-
+.section {
+  display: none;
 }
