--- a/src/client/components/organisms/lender-match/landing-page/helpful-questions.scss
+++ b/src/client/components/organisms/lender-match/landing-page/helpful-questions.scss
@@ -1,75 +1,49 @@
 .section {
-    @include grid-column(12);
-    //position: relative;
-    //margin: 60px 5.1vw 80px 9.7vw;
-    //overflow: auto;
-    &::after {
-        content: "";
-        clear: both;
-        display: table;
-    }
-    h2 {
-        @include font-size($h2-font-sizes);
-        color: #333333;
-        margin-bottom: 35px;
-    }
-    .CallToAction {
-        .ButtonGroup {
-            margin-top: 25px;
-            button {
-                margin: 15px 0;
-                @include grid-column(3);
-                @include grid-shift(2.75);
-                margin-bottom: 20px;
-            }
-        }
-    }
+    margin-bottom: 50px;
 }
 
-@media screen and (max-width:767px) {
-    .section {
-        width: 100%;
-        margin: 50px auto;
-        h2 {
-            @include font-size($h2-font-sizes);
-            @include grid-shift(0.4);
-            line-height: 30px;
-        }
-        h5 {
-            font-size: 16px;
-            line-height: 19px;
-        }
-        .CallToAction {
-            .ButtonGroup {
-                margin-top: 20px;
-                button {
-                    @include grid-column(12);
-                    @include grid-shift(-0.05);
-                }
-            }
-        }
-    }
+.ButtonGroup {
+    @include grid-container;
 }
 
-@media screen and (max-width:767px) {
-    .desktop {
+@include grid-media($sba-grid-small) {
+
+    .section h2 {
+        @include grid-column(6, $sba-grid-small);
+    }
+
+    .mobileFAQs {
+        @include grid-column(6, $mobile-0gutter);
+        margin-bottom:25px;
+    }
+    .desktopFAQs {
         display: none;
     }
-}
 
-@media screen and (min-width:768px) {
-    .mobile {
-        display: none;
+    .ButtonGroup button {
+        @include grid-column(6);
+    }
+
+    .ButtonGroup button:first-child {
+        margin-bottom: 20px;
     }
 }
 
-.faqAnchor{
-    text-decoration: underline;
-    color: $sba-blue;
+@include grid-media($sba-grid-medium) {
+    .section h2 {
+        @include grid-column(12);
+    }
+    .mobileFAQs {
+        display: none;
+    }
+
+    .ButtonGroup button {
+        @include grid-column(3);
+        @include grid-shift(3);
+    }
+
 }
 
+@include grid-media($sba-grid-large) {
 
-.faqAnchor:hover, .faqAnchor:active{
-    text-decoration: underline;
-    color: $sba-blue-dark;
 }
